Mention code is on dev.

--- a/docs/Design/MIS/MIS.tex
+++ b/docs/Design/MIS/MIS.tex
@@ -81,7 +81,7 @@ The following document details the Module Interface Specifications for Olympian:
 Complementary documents include the System Requirement Specifications
 and Module Guide.  The full documentation and implementation can be
 found at \url{https://github.com/dimitritsampiras/olympian}.
-
+Note that actual code is contained on the `dev' branch.
 \section{Notation}
 
 \wss{You should describe your notation.  You can use what is below as
