--- a/docs/Design/MIS/MIS.tex
+++ b/docs/Design/MIS/MIS.tex
@@ -76,13 +76,12 @@ See SRS Documentation at \wss{give url}
 
 \section{Introduction}
 
-The following document details the Module Interface Specifications for
-\wss{Fill in your project name and description}
+The following document details the Module Interface Specifications for Olympian: a social workout platform that unites beginner, intermediate, and experienced athletes and fitness enthusiasts. Users are able to track, post, interact with, discover, and utilize workouts and programs that are all user generated.
 
 Complementary documents include the System Requirement Specifications
 and Module Guide.  The full documentation and implementation can be
-found at \url{...}.  \wss{provide the url for your repo}
-
+found at \url{https://github.com/dimitritsampiras/olympian}.
+Note that actual code is contained on the `dev' branch.
 \section{Notation}
 
 \wss{You should describe your notation.  You can use what is below as
