more details, awaiting Dimitri content

--- a/docs/Design/SystDesign/SysDes.tex
+++ b/docs/Design/SystDesign/SysDes.tex
@@ -1,6 +1,5 @@
 \documentclass[12pt, titlepage]{article}
 
-
 \usepackage{fullpage}
 \usepackage[round]{natbib}
 \usepackage{multirow}
@@ -182,9 +181,14 @@
 	
 	\wss{If appropriate}
 	
-	\section{Timeline}
+	Communication between client and server will be done with HTTP requests.
+
+	There is no custom communication protocol used.
 	
+	\section{Timeline}
 	\wss{Schedule of tasks and who is responsible}
+	
+	Below is a timeline of the major milestones and the developers responsible for completing them.
 	
 	% \bibliographystyle {plainnat}
 	% \bibliography{../../../refs/References}
@@ -197,6 +201,8 @@
 	
 	\wss{Include additional information related to the appearance of, and
 		interaction with, the user interface}
+	
+	See Figma.
 	
 	\section{Mechanical Hardware}
 	N/A
