--- a/docs/Design/SystDesign/SysDes.tex
+++ b/docs/Design/SystDesign/SysDes.tex
@@ -165,7 +165,7 @@
 	\wss{Show what will be built, with detail on fabrication and materials}
 	\wss{Include appendices as appropriate, possibly with sketches, drawings, CAD, etc}
 	
-	Olypmian will run on mobile devices (e.g. iPhone, Samsung Galaxy) not designed or manufactured by the team.
+	Olympian will run on mobile devices (e.g. iPhone, Samsung Galaxy) not designed or manufactured by the team.
 	
 	\section{Design of Electrical Components}
 	
