Add most NFRs to traceability matrix

--- a/docs/Design/MG/MG.tex
+++ b/docs/Design/MG/MG.tex
@@ -437,6 +437,29 @@ FR9 & \mref{mExercise}, \mref{mUFG}, \mref{mEC}, \mref{mQuantifier}\\
 FR10 & \mref{mExercise}, \mref{mUFG}, \mref{mQuantifier}\\
 FR11 & \mref{mUFG}, \mref{mWB}\\
 
+NFR1 & \mref{mUP}\\
+NFR2 & \mref{mUP}\\
+NFR3 & \mref{mUP}\\
+NFR4 & \\
+NFR5 & \mref{mExercise}, \mref{mWorkout}, \mref{mWR}, \mref{mUP}, \mref{mUFG}, \mref{mWB}\\
+NFR6 & \mref{mExercise}, \mref{mWorkout}, \mref{mWR}, \mref{mUP}, \mref{mUFG}, \mref{mWB}\\
+NFR7 & \mref{mExercise}, \mref{mWorkout}, \mref{mWR}, \mref{mUP}, \mref{mUFG}, \mref{mWB}\\
+NFR8 & \mref{mExercise}, \mref{mWorkout}, \mref{mWR}, \mref{mWC}, \mref{mWRC}, \mref{mEC}\\
+NFR9 & \mref{mWB}\\
+NFR10 & \\
+NFR11 & \\
+NFR12 & \\
+NFR13 & \mref{mHH}\\
+NFR14 & \mref{mUP}\\
+NFR15 & \mref{mUP}\\
+NFR16 & \mref{mHH}\\
+NFR17 & \mref{mHH}\\
+NFR18 & \mref{mHH}\\
+NFR19 & \mref{mUP}, \mref{mWB}\\
+NFR20 & \mref{mUP}, \mref{mWB}\\
+NFR21 & \mref{mUP}\\
+NFR22 & \\
+
 \bottomrule
 \end{tabular}
 \caption{Trace Between Requirements and Modules}
